[LFC][IFC] Fix editing/selection/move-by-line-003.html https://bugs.webkit.org/show_bug.cgi?id=246730

Reviewed by Antti Koivisto.

Empty inline boxes (including the root inline box) should not contribute to the enclosing line geometry.
It confuses the editing logic when the empty root inline box makes the enclosing geometry overflow the previous line (empty root inline box has negative top as it sits on a zero height line box).

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::collectEnclosingLineGeometry const):

Canonical link: https://commits.webkit.org/255809@main